# ollama-proxy

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  run.py  run_tests.sh
app/: config.py  main.py  models.py
tests/: conftest.py  test_api_endpoints.py  test_integration.py  test_model_mapping.py  test_streaming.py
