[project]
name = ""
version = "0.0.1"
requires-python = ">=3.8" # Specify minimum Python version
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
    "litellm>=1.40.14",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "starlette>=0.31.1",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "ollama>=0.1.9",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.11.5",
]

[tool.ruff]
# Add any top-level ruff settings here if needed

[tool.ruff.lint]
# Exclude markdown files from linting
exclude = ["*.md"]
# Add specific rules to select or ignore if needed, e.g.:
# select = ["E", "F", "W", "I"]
# ignore = []
